--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -568,16 +568,10 @@ disabled look for disabled choices in the results dropdown
 }
 
 /* Icons */
-@font-face
-{
+@font-face{
     font-family: 'slick';
     font-weight: normal;
     font-style: normal;
-
-    /*
-        src: url('./fonts/slick.eot');
-        src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
-    */
 }
 /* Arrows */
 .slick-prev,
@@ -1351,7 +1345,7 @@ body {
     color: #333;
 }
 .ng-table th.sortable {
-+    font-weight: bold;
+  font-weight: bold;
     font-size: 15px;
     color: #333;
     text-align: center;
@@ -3083,11 +3077,11 @@ label > input:checked + img { /* (RADIO CHECKED) IMAGE STYLES */
 .addingMaster{
     position: absolute;
     top: 10px;
-    right: -10px;
-    font-size: 25px;
+    right: 0px;
+    font-size: 20px;
 }
 .trip-select-box{
-    width: 75% !important;
+    width: 68% !important;
     display: inline-block;
 }
 .popup-center{
@@ -3183,18 +3177,18 @@ a:hover, a:focus{
     font-size: 18px;
     font-family: Gotham-Medium;
     color: #838993;
-    padding: 15px 10px;
+    padding: 15px 0px;
 }
 .addingData{
-    width: 25%;
-    padding: 8px 12px 8px 5px;
     display: inline;
-    background-color: #ccc;
-    height: 0;
-    line-height: 45px;
-    border-radius: 5px;
 }
 .addingData a{
     position: relative;
     font-size: 12px;
+}
+.attachments{
+    border-radius: 5px;
+}
+.border-right{
+    border-right: 1px solid #ccc;
 }
