--- a/client/views/index.html
+++ b/client/views/index.html
@@ -148,7 +148,7 @@
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu label="Payments" ui-sref="payments"></left-menu>
-                                                <left-menu label="LoadRequest" ui-sref="loadRequest"></left-menu>
+                                                <left-menu label="LoadRequest" ui-sref="loadRequests"></left-menu>
                                             </div>
                                         </div>
                                     </div>
