--- a/client/views/partials/loadRequests/loadRequestsList.html
+++ b/client/views/partials/loadRequests/loadRequestsList.html
@@ -39,10 +39,12 @@
                 <td data-title="'Action'" class="col-sm-2">
                     <a href="#" class="btn" ng-click="goToEditPage(x._id)">
                         <span class="glyphicon glyphicon-pencil"></span></a>
-
                     <a href="#" class="btn" ng-click="delete(x._id)">
 
                         <span class="glyphicon glyphicon-remove"></span>
+                    </a>
+                    <a href="#" class="btn" ng-click="share(x._id)">
+                        <span class="glyphicon glyphicon-comment"></span>
                     </a>
                 </td>
             </tr>
