--- a/client/views/index.html
+++ b/client/views/index.html
@@ -149,6 +149,8 @@
                                                 <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu label="Payments" ui-sref="payments"></left-menu>
                                                 <left-menu label="LoadRequest" ui-sref="loadRequests"></left-menu>
+                                                <left-menu label="Send SMS" ui-sref="sendSMS"></left-menu>
+
                                             </div>
                                         </div>
                                     </div>
